Fix overflowing body to html

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html,
 body {
   width: 100%;
+  margin: 0;
 }
 #convert-btn {
   display: none;
